# prime_Pulliam_Christopher

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: modules.rst  prime2_clp2181.rst
src/prime2_clp2181/: __init__.py  prime2_clp2181.py
tests/: test_prime2_clp2181.py
