[tool.poetry]
name = "prime2_clp2181"
version = "0.1.0"
description = "A package for hw7"
authors = ["Christopher Pulliam"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
